Remove io.commons from test-common